# job_agent

./: GUIDE.md  README.md  deploy.sh  docker-compose.override.yml  docker-compose.yml  production.env  test_end_to_end.py  test_error_handling.py  test_job_agent_pipeline.py  test_job_loader.py  test_profile_storage.py  test_prompts.py  test_session_management.py  test_url_validation.py  verify_backend.py
backend/: Dockerfile  README.md  main.py  pyproject.toml
backend/agents/: data_collector.py  feedback.py  modificator.py  writer.py
backend/api/: routes.py
backend/chains/: __init__.py  cover_letter_chain.py  question_answer_chain.py
backend/loaders/: job_description_loader.py
backend/prompts/: data_collector.txt  feedback.txt  modificator.txt  writer.txt
backend/schemas/: models.py
backend/services/: profile_storage.py  session_manager.py
backend/utils/: error_handler.py  profile_normalizer.py
frontend/: Dockerfile  README.md  nginx.conf
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ActionButtons.tsx  AgentProgress.tsx  ChatInterface.tsx  FeedbackSelector.tsx  JobUrlInput.tsx  MessageBubble.tsx  OutputDisplay.tsx  ProfileInput.tsx  QuestionInput.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
